--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "npx tsc && vite build",
-    "preview": "npx vite preview"
+    "preview": "npx vite preview",
+    "postinstall": "chmod +x node_modules/.bin/* || true"
   },
   "dependencies": {
     "react": "^18.2.0",
